Added a table of contents and more documentation to the thorn tutorial.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -26,6 +26,10 @@
     "\n",
     "#### Table of Contents:\n",
     "1. [Call on NRPy+ to convert the SymPy expressions for the evolution equations and A-to-B into one C-code kernel for each.](#step1)\n",
+    "    1. [Step 1.1: Import NRPy+ core modules and the GiRaFFE module](#step1)\n",
+    "    1. [Step 1.2: Create the C code output kernel.](#step1.2)\n",
+    "    1. [Steps 1.3-1.5: Writing to file](#step1.3)\n",
+    "    1. [Step 1.6: The A-to-B driver](#step1.6)\n",
     "1. [Interfacing with the Einstein Toolkit](#step2)\n",
     "    1. [Constructing the Einstein Toolkit C-code calling functions that include the C code kernels](#step2a)\n",
     "    1. [CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure](#step2b)\n",
@@ -41,7 +45,9 @@
    "source": [
     "## Step 1: Call on NRPy+ to convert the SymPy expressions for the evolution equations and A-to-B into one C-code kernel for each. \n",
     "<a id='step1'></a>\n",
-    "\\[Back to [top](#top)\\]\n"
+    "\\[Back to [top](#top)\\]\n",
+    "### Step 1.1: Import NRPy+ core modules and the GiRaFFE module\n",
+    "We start by importing the core NRPy+ modules we need and setting commonly used parameters. Since we are writing an ETK thorn, we'll need to set \"grid::GridFuncMemAccess\" to \"ETK\". We will then import the GiRaFFE_Higher_Order.py module we previously created and run its main function to generate the SymPy for the expressions we want."
    ]
   },
   {
@@ -68,8 +74,26 @@
     "# Step 1c: Call the GiRaFFE_Higher_Order() function from within the\n",
     "#          GiRaFFE_HO/GiRaFFE_Higher_Order.py module.\n",
     "import GiRaFFE_HO.GiRaFFE_Higher_Order as gho\n",
-    "gho.GiRaFFE_Higher_Order()\n",
+    "gho.GiRaFFE_Higher_Order()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1.2: Create the C code output kernel.\n",
+    "<a id='step1.2'></a>\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
+    "To do this, for each .h file we need, we will set up an array of lhrh objects representing the gridfunctios to print. We will then pass that array to FD_outputC to get a string of optimized C code. Note that several kernels depend on the value of u0; we append the line of code to those kernels to access the value of u0. Next, we use the loop function to add code to the kernel so that is applied to the whole ETK grid."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 2: Create the C code output kernel.\n",
     "Prereqs_to_print = [\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"uU0\"),rhs=gho.uU[0]),\\\n",
@@ -93,6 +117,7 @@
     "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammadet\"),rhs=gho.gammadet),\\\n",
     "                   ]\n",
     "\n",
+    "# To best format this for the ETK, we'll need to register these gridfunctions.\n",
     "Stilde_rhsD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"Stilde_rhsD\")\n",
     "A_rhsD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"A_rhsD\")\n",
     "psi6Phi_rhs = gri.register_gridfunctions(\"AUX\",\"psi6Phi_rhs\")\n",
@@ -120,8 +145,26 @@
     "                            [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\\\n",
     "                             \"cctk_lsh[0]-cctk_nghostzones[0]\"],\\\n",
     "                            [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
-    "                            Conservs_CKernel.replace(\"time\",\"cctk_time\"))\n",
+    "                            Conservs_CKernel.replace(\"time\",\"cctk_time\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Steps 1.3-1.5\n",
+    "<a id='step1.3'></a>\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
+    "Here, we write our C code to files after first creating appropriate directories. Note that we also import u0_smallb_Poynting__Cartesian.py for its computeu0_Cfunction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 3: Create directories for the thorn if they don't exist.\n",
     "!mkdir GiRaFFE_HO     2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
     "!mkdir GiRaFFE_HO/src 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
@@ -145,12 +188,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Steps 1.6: The A-to-B driver\n",
+    "<a id='step1.6'></a>\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
     "We will also need a routine to compute new Valencia 3-velocities at each timestep using a conservative-to-primitive solver. Since we need $v^i_{(n)}$ everywhere, this will require us to compute $B^i$ everywhere. However, $B^i = \\epsilon^{ijk} \\partial_j A_k$ requires derivatives of $A_i$, so getting $B^i$ will require some finesse. A chief aspect of this will require using lower-order finite differencing in the ghost zones. To that end, we will create .h files for each finite differencing order $\\leq 10$, as well as upwinded- and downwinded-derivatives at 2nd order. These will let us compute the derivative at the outermost gridpoints."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,15 +209,11 @@
       "Wrote to file \"GiRaFFE_HO/src/B_from_A_6.h\"\n",
       "Wrote to file \"GiRaFFE_HO/src/B_from_A_4.h\"\n",
       "Wrote to file \"GiRaFFE_HO/src/B_from_A_2.h\"\n",
-      "Error: Variable AD_dupD20 implies an upwind derivative, but NRPy+'s upwinding\n",
-      "  algorithm requires that up or downwinding be with respect to some upwinding\n",
-      "  control variable, set as FD_outputC()'s fourth function argument\n",
-      "  Note that in BSSN, the shift vector betaU controls the upwinding.\n",
-      "  See https://arxiv.org/pdf/gr-qc/0206072.pdf for motivation and\n",
-      "  https://arxiv.org/pdf/gr-qc/0109032.pdf for implementation details,\n",
-      "  at second order. Note that the BSSN shift vector behaves like a *negative*\n",
-      "  velocity. See http://www.damtp.cam.ac.uk/user/naweb/ii/advection/advection.php\n",
-      "  for a very basic example motivating this choice.\n"
+      "Error: Unregistered variable \"AD_ddnD20\" in SymPy expression\n",
+      "All variables in SymPy expressions passed to FD_outputC() must be registered\n",
+      "in NRPy+ as either a gridfunction or Cparameter, by calling\n",
+      "AD_ddnD20 = register_gridfunctions...() (in ixp/grid) if \"AD_ddnD20\" is a gridfunction, or\n",
+      "AD_ddnD20 = Cparameters() (in par) otherwise (e.g., if it is a free parameter set at C runtime).\n"
      ]
     },
     {
@@ -180,16 +223,16 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-c3cc596dbbb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     61\u001b[0m                 \u001b[0mBU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mLeviCivitaUUU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mAD_dD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m \u001b[0mfin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFD_outputC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"GiRaFFE_HO/src/B_from_A_2x0U.h\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mset_BU_to_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"outCverbose=False\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDIM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/penelson/juppp/nrpytutorial/finite_difference.py\u001b[0m in \u001b[0;36mFD_outputC\u001b[0;34m(filename, sympyexpr_list, params, upwindcontrolvec)\u001b[0m\n\u001b[1;32m     73\u001b[0m                         \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"  velocity. See http://www.damtp.cam.ac.uk/user/naweb/ii/advection/advection.php\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m                         \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"  for a very basic example motivating this choice.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m                         \u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m                     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-50bd37017389>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     49\u001b[0m                 \u001b[0mBU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mLeviCivitaUUU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mAD_dD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m \u001b[0mfin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFD_outputC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"GiRaFFE_HO/src/B_from_A_2x0D.h\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mset_BU_to_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"outCverbose=False\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0mAD_dupD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mixp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeclarerank2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"AD_dupD\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"nosym\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/penelson/juppp/nrpytutorial/finite_difference.py\u001b[0m in \u001b[0;36mFD_outputC\u001b[0;34m(filename, sympyexpr_list, params, upwindcontrolvec)\u001b[0m\n\u001b[1;32m     81\u001b[0m                     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\" = register_gridfunctions...() (in ixp/grid) if \\\"\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\\" is a gridfunction, or\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m                     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\" = Cparameters() (in par) otherwise (e.g., if it is a free parameter set at C runtime).\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m                     \u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m                 \u001b[0mlist_of_deriv_vars_with_duplicates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;31m#            elif vartype == \"gridfunction\":\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: global name 'exit' is not defined"
      ]
     }
    ],
    "source": [
-    "#AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\",DIM=3)\n",
-    "# Step 2: Import the four metric\n",
+    "# Step 6: The A-to-B driver\n",
     "\n",
+    "# Step 6a: Import the Levi-Civita symbol and build the corresponding tensor.\n",
     "# We already have a handy function to define the Levi-Civita symbol in WeylScalars\n",
     "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
     "LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
@@ -198,11 +241,12 @@
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            LCijk = LeviCivitaDDD[i][j][k]\n",
-    "            LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gho.gammadet)\n",
+    "            #LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gho.gammadet)\n",
     "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gho.gammadet)\n",
     "\n",
     "AD_dD = ixp.declarerank2(\"AD_dD\",\"nosym\")\n",
     "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\")\n",
+    "# Step 6b: We can use this function to compactly reset to expressions to print at each FD order.\n",
     "def set_BU_to_print():\n",
     "    return [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
@@ -214,6 +258,7 @@
     "        for k in range(DIM):\n",
     "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
     "\n",
+    "# Step 6c: We'll lower the FD order at each stage and write to a new file.\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 10)\n",
     "fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_10.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
     "\n",
@@ -229,17 +274,19 @@
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
     "fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
     "\n",
-    "#AD_ddnD = ixp.declarerank2(\"AD_ddnD\",\"nosym\")\n",
-    "#for i in range(DIM):\n",
-    "#    BU[i] = 0\n",
-    "#    for j in range(DIM):\n",
-    "#        for k in range(DIM):\n",
-    "#            if j is 0:\n",
-    "#                BU[i] += LeviCivitaUUU[i][j][k] * AD_ddnD[k][j]\n",
-    "#            else:\n",
-    "#                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
+    "# Step 6c: For the outermost points, we'll need a separate file for each face. \n",
+    "# These will correspond to an upwinded and a downwinded file for each direction.\n",
+    "AD_ddnD = ixp.declarerank2(\"AD_ddnD\",\"nosym\")\n",
+    "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            if j is 0:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_ddnD[k][j]\n",
+    "            else:\n",
+    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
     "\n",
-    "#fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x0D.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x0D.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
     "\n",
     "AD_dupD = ixp.declarerank2(\"AD_dupD\",\"nosym\")\n",
     "for i in range(DIM):\n",
