Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: start work on remaining GRMHD quantities

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -450,7 +450,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define gridfunctions to interpolate"
+    "## Define gridfunctions to interpolate\n",
+    "\n",
+    "### First specify NRPy+ output file and initialize which_InterpCounter, which keeps track of the number of interpolated functions on the grid"
    ]
   },
   {
@@ -461,8 +463,29 @@
    "source": [
     "NRPyoutfilename = \"interp_sph_grids_ETK/src/list_of_functions_to_interpolate.h\"\n",
     "\n",
-    "which_InterpCounter = 0\n",
+    "which_InterpCounter = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add GRMHD quantities to list of interpolated quantities\n",
     "\n",
+    "These include\n",
+    "* $\\rho_b$, the baryonic density (i.e., the HydroBase variable $\\verb|rho|$)\n",
+    "* $P$, the total gas pressure (i.e., the HydroBase variable $\\verb|press|$)\n",
+    "* $\\Gamma v_{(n)}^i$, the Valencia 3-velocity times the Lorentz factor (i.e., the HydroBase 3-gridfuntion $\\verb|vel|$, multiplied by the Lorentz factor). This definition of velocity has the advantage that after interpolation, it will not violate $u^\\mu u_\\mu = -1$. In terms of the IllinoisGRMHD \n",
+    "* $A_i$, the *unstaggered* magnetic vector potential.\n",
+    "* $B^i$, the *unstaggered* magnetic field vector (output only for validation purposes)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gf_interp_list.append(gf_interp(\"IGM density primitive\",order=\"1\"))\n",
     "rho_b       = gri.register_gridfunctions(\"AUX\",\"rho_b\")\n",
     "interp_expr = rho_b\n",
@@ -1037,8 +1060,7 @@
     "  LANG: C\n",
     "  OPTIONS: GLOBAL\n",
     "} \"Decrement InterpCounter variable\"\n",
-    "##################\n",
-    "\n"
+    "##################"
    ]
   }
  ],
