--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -4,17 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interpolation to Spherical Grids in the Einstein Toolkit\n",
+    "<a id='top'></a>\n",
+    "# $\\text{interp_sph_grids_ETK}$: An Einstein Toolkit Module for Interpolation to Spherical Grids\n",
     "\n",
+    "<font color='blue'>**This module has not yet undergone validation testing.**</font>\n",
     "\n",
-    "<font color='blue'>**This module has not yet undergone validation testing.**</font>"
+    "This tutorial module takes a three-part structure. First, all the needed core Einstein Toolkit (ETK) C routines for interpolation are presented. Second, NRPy+ is used to output gridfunctions needed on the spherical grids. Third, the needed files for interfacing this module with the rest of the Einstein Toolkit (ccl files) are specified.\n",
+    "\n",
+    "### Table of Contents: \n",
+    "1. [Introduction; Module Structure](#structure)\n",
+    "    1. [Low-Level Einstein Toolkit Interpolation Function](#ETK_interp)\n",
+    "    1. [Spherical Grid Structure](#sphericalgridnotes)\n",
+    "    1. [Output File Format](#fileformat)\n",
+    "    1. [The Interpolator Driver Function](#maininterpolator) (calls above functions as needed)\n",
+    "1. [Using NRPy+ to Generate C Code for Needed Gridfunctions](#NRPy)\n",
+    "    1. [Set up NRPy-based \"list_of_functions_to_interpolate.h\":](#NRPyListofFuncsInterp)\n",
+    "        1. [GRMHD quantities](#NRPyGRMHD)\n",
+    "        1. [Compute all 10 components of the 4-metric $g_{\\mu\\nu}$](#NRPy4metric)\n",
+    "        1. [Compute all 40 4-Christoffels $\\Gamma^{\\mu}_{\\nu\\delta}$](#NRPy4Christoffels)\n",
+    "    1. [C code calling function for the NRPy+ C output](#NRPyCcallingfunction)\n",
+    "    1. [C Code for Initializing and incrementing \"InterpCounter\"](#NRPyInterpCounter)\n",
+    "1. [Interfacing with the rest of the Einstein Toolkit; Setting up CCL files](#cclfiles)\n",
+    "    1. [$\\text{make.code.defn}$](#makecodedefn)\n",
+    "    1. [$\\text{interface.ccl}$](#interfaceccl)\n",
+    "    1. [$\\text{param.ccl}$](#paramccl)\n",
+    "    1. [$\\text{schedule.ccl}$](#scheduleccl)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Structure\n",
+    "<a id='structure'></a>\n",
+    "## Introduction; Module Structure\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "This module is designed to interpolate arbitrary quantities on [Einstein Toolkit](https://einsteintoolkit.org/) Adaptive-Mesh Refinement (AMR) grids (using the [Carpet](https://carpetcode.org/) AMR infrastructure) to numerical grids with spherical sampling.\n",
     "\n",
@@ -39,7 +62,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='ETK_interp'></a>\n",
     "### Low-Level ETK Interpolation Function\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "We start by writing the low-level interpolation function **Interpolate_to_sph_grid()**, which  to file. \n",
     "\n",
@@ -175,8 +200,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='sphericalgridnotes'></a>\n",
     "### Setting up the Spherical Grids\n",
-    "\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "* By default, we set logarithmic radial coordinates: $r(x_{0,i}) = R_0 + e^{x_{0,i}}$, where\n",
     "  + $x_{0,i} = x_{0, \\mathrm{beg}} + \\left(i+\\frac{1}{2}\\right) \\Delta x_0$\n",
@@ -260,9 +286,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Outputting to File\n",
+    "<a id='fileformat'></a>\n",
+    "### Outputting to File (File format notes)\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
-    "Since they take almost no space, we attach the entire metadata to each interpolated function that is output:"
+    "Since they take almost no space relative to the data chunks, we attach the entire metadata to each interpolated function that is output:"
    ]
   },
   {
@@ -325,7 +353,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='maininterpolator'></a>\n",
     "## The Main Interpolation Driver Function\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "The **Interpolate_to_sph_grid_main_function()** function calls the above functions as follows:\n",
     "1. **sph_grid_Interpolate_many_pts__set_interp_pts()**: First set up the spherical grids\n",
@@ -400,7 +430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use NRPy+ C Output to Set All Output Gridfunctions\n"
+    "<a id='NRPy'></a>\n",
+    "# Use NRPy+ C Output to Set All Output Gridfunctions\n",
+    "\\[Back to [top](#top)\\]"
    ]
   },
   {
@@ -450,7 +482,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define gridfunctions to interpolate\n",
+    "<a id='NRPyListofFuncsInterp'></a>\n",
+    "## Set up NRPy-based \"list_of_functions_to_interpolate.h\"\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "### First specify NRPy+ output file and initialize which_InterpCounter, which keeps track of the number of interpolated functions on the grid"
    ]
@@ -470,19 +504,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add GRMHD quantities to list of interpolated quantities\n",
+    "<a id='NRPyGRMHD'></a>\n",
+    "### GRMHD quantities (*IN PROGRESS*)\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "These include\n",
     "* $\\rho_b$, the baryonic density (i.e., the HydroBase variable $\\verb|rho|$)\n",
     "* $P$, the total gas pressure (i.e., the HydroBase variable $\\verb|press|$)\n",
-    "* $\\Gamma v_{(n)}^i$, the Valencia 3-velocity times the Lorentz factor (i.e., the HydroBase 3-gridfuntion $\\verb|vel|$, multiplied by the Lorentz factor). This definition of velocity has the advantage that after interpolation, it will not violate $u^\\mu u_\\mu = -1$. In terms of the IllinoisGRMHD \n",
+    "* $\\Gamma v_{(n)}^i$, the Valencia 3-velocity times the Lorentz factor (i.e., the HydroBase 3-gridfuntion $\\verb|vel|$, multiplied by the Lorentz factor). This definition of velocity has the advantage that after interpolation, it will not violate $u^\\mu u_\\mu = -1$. In terms of the IllinoisGRMHD 3-velocity $v^i = u^i / u^0$, the Valencia 3-velocity is given by (Eq. 11 of [Etienne *et al*](https://arxiv.org/pdf/1501.07276.pdf)):\n",
+    "$$\n",
+    "v_{(n)}^i = \\frac{1}{\\alpha} \\left(v^i + \\beta^i\\right).\n",
+    "$$\n",
+    "Further, $\\Gamma = \\alpha u^0$ is given by (as shown [here](Tutorial-u0_smallb_Poynting-Cartesian.ipynb)):\n",
+    "$$\n",
+    "\\Gamma = \\alpha u^0 = \\sqrt{\\frac{1}{1 - \\gamma_{ij}v^i_{(n)}v^j_{(n)}}}.\n",
+    "$$\n",
     "* $A_i$, the *unstaggered* magnetic vector potential.\n",
     "* $B^i$, the *unstaggered* magnetic field vector (output only for validation purposes)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +544,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='NRPy4metric'></a>\n",
     "### Compute all 10 components of the 4-metric $g_{\\mu\\nu}$\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "We are given $\\gamma_{ij}$, $\\alpha$, and $\\beta^i$ from ADMBase, and the 4-metric is given in terms of these quantities as\n",
     "$$\n",
@@ -514,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +600,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='NRPy4Christoffels'></a>\n",
     "### Compute all 40 4-Christoffels $\\Gamma^{\\mu}_{\\nu\\delta}$\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "By definition,\n",
     "$$\n",
@@ -584,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,19 +711,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Next we write the function for the above NRPy+ output"
+    "<a id='NRPyCcallingfunction'></a>\n",
+    "### Next we write the calling function for the above NRPy+ output\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "In the above blocks, we wrote and appended to a file \"list_of_functions_to_interpolate.h\". Here we write the calling function for this C code."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
+      "Overwriting interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
      ]
     }
    ],
@@ -720,12 +771,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interpolation Function Counter Routines, for Scheduling"
+    "<a id='NRPyInterpCounter'></a>\n",
+    "### C Code for Initializing and incrementing \"InterpCounter\"\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "The gridfunctions are interpolated one at a time based on the current value of the index quantity \"InterpCounter\". Here we write the C code needed for initializing and incrementing this variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -790,8 +845,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='cclfiles'></a>\n",
+    "## Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
+    "\n",
+    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns.\n",
+    "1. $\\text{param.ccl}$: specifies free parameters within the thorn.\n",
+    "1. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions.\n",
+    "\n",
+    "<a id='makecodedefn'></a>\n",
+    "### $\\text{make.code.defn}$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "Before writing the \"ccl\" files, we first add Einstein Toolkit's equivalent of a Makefile, the make.code.defn file:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -814,20 +890,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "<a id='interfaceccl'></a>\n",
+    "### $\\text{interface.ccl}$\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
-    "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
-    "\n",
-    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns.\n",
-    "1. $\\text{param.ccl}$: specifies free parameters within the thorn.\n",
-    "1. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions.\n",
-    "\n",
-    "Let's start with $\\text{interface.ccl}$. The [official Einstein Toolkit (Cactus) documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManual.html) defines what must/should be included in an interface.ccl file [**here**](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). "
+    "Let's now write $\\text{interface.ccl}$. The [official Einstein Toolkit (Cactus) documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManual.html) defines what must/should be included in an interface.ccl file [**here**](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -876,12 +948,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='paramccl'></a>\n",
+    "### $\\text{param.ccl}$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
     "We will now write the file $\\text{param.ccl}$. This file allows the listed parameters to be set at runtime. We also give allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -992,6 +1068,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='scheduleccl'></a>\n",
+    "### $\\text{schedule.ccl}$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
     "Finally, we will write the file $\\text{schedule.ccl}$; its official documentation is found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
     "\n",
     "This file declares storage for variables declared in the $\\text{interface.ccl}$ file and specifies when the various parts of the thorn will be run:"
@@ -999,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
