--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -9,10 +9,20 @@
     "\n",
     "<font color='blue'>**This module has not yet undergone validation testing.**</font>\n",
     "\n",
-    "This tutorial module takes a three-part structure. First, all the needed core Einstein Toolkit (ETK) C routines for interpolation are presented. Second, NRPy+ is used to output gridfunctions needed on the spherical grids. Third, the needed files for interfacing this module with the rest of the Einstein Toolkit (ccl files) are specified.\n",
+    "### Basic Approach\n",
+    "This module is designed to interpolate arbitrary quantities on [Einstein Toolkit](https://einsteintoolkit.org/) Adaptive-Mesh Refinement (AMR) grids (using the [Carpet](https://carpetcode.org/) AMR infrastructure) to numerical grids with spherical sampling.\n",
+    "\n",
+    "Given some set of $N$ quantities $\\mathbf{Q}=\\{Q_0,Q_1,Q_2,...,Q_{N-2},Q_{N-1}\\}$, this module performs the following for each $Q_i$:\n",
+    "\n",
+    "1. Evaluate $Q_i$ at all gridpoints that are not ghost zones. Sometimes $Q_i$ is computed using finite difference derivatives, so this is necessary.\n",
+    "1. Call upon Carpet's interpolation and interprocessor synchronization functions to fill in $Q_i$ at all ghost zones, *except* at the outer boundary. We do not generally trust $Q_i$ at the outer boundary due to errors associated with the approximate outer boundary conditions. \n",
+    "1. At this point, $Q_i$ is set at all gridpoints except ghost zones at the outer boundary. Interpolate $Q_i$ to the spherical grids, **maintaining the Cartesian basis for all vectors and tensors**, and append the result to a file.\n",
     "\n",
     "### Table of Contents: \n",
-    "1. [Introduction; Module Structure](#structure)\n",
+    "\n",
+    "This tutorial module takes a three-part structure. First, all the needed core Einstein Toolkit (ETK) C routines for interpolation are presented. Second, NRPy+ is used to output gridfunctions needed on the spherical grids. Third, the needed files for interfacing this module with the rest of the Einstein Toolkit (ccl files) are specified.\n",
+    "\n",
+    "1. [Setting up the Core C Code for the Einstein Toolkit Module](#ETKmodule)\n",
     "    1. [Low-Level Einstein Toolkit Interpolation Function](#ETK_interp)\n",
     "    1. [Spherical Grid Structure](#sphericalgridnotes)\n",
     "    1. [Output File Format](#fileformat)\n",
@@ -35,17 +45,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='structure'></a>\n",
-    "## Introduction; Module Structure\n",
+    "<a id='ETKmodule'></a>\n",
+    "## Setting up the Core C Code for the Einstein Toolkit Module\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "This module is designed to interpolate arbitrary quantities on [Einstein Toolkit](https://einsteintoolkit.org/) Adaptive-Mesh Refinement (AMR) grids (using the [Carpet](https://carpetcode.org/) AMR infrastructure) to numerical grids with spherical sampling.\n",
-    "\n",
-    "Given some set of $N$ quantities $\\mathbf{Q}=\\{Q_0,Q_1,Q_2,...,Q_{N-2},Q_{N-1}\\}$, this module performs the following for each $Q_i$:\n",
-    "\n",
-    "1. Evaluate $Q_i$ at all gridpoints that are not ghost zones. Sometimes $Q_i$ is computed using finite difference derivatives, so this is necessary.\n",
-    "1. Call upon Carpet's interpolation and interprocessor synchronization functions to fill in $Q_i$ at all ghost zones, *except* at the outer boundary. We do not generally trust $Q_i$ at the outer boundary due to errors associated with the approximate outer boundary conditions. \n",
-    "1. At this point, $Q_i$ is set at all gridpoints except ghost zones at the outer boundary. Interpolate $Q_i$ to the spherical grids, **maintaining the Cartesian basis for all vectors and tensors**, and append the result to a file."
+    "First we set up the output directories for the ETK module:"
    ]
   },
   {
