Added a table of contents to the GiRaFFEFood ETK tutorial. Further revised the organization of other tutorials.

--- a/Tutorial-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-GiRaFFEFood_HO.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='top'></a>\n",
     "$\\newcommand{\\giraffe}{\\texttt{GiRaFFE}}$\n",
     "$\\newcommand{\\gf}{\\texttt{GiRaFFEFood}}$\n",
     "# $\\gf$: Initial data for $\\giraffe$\n",
@@ -18,14 +19,24 @@
     "v^i &= \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i \\\\\n",
     "B^i &= \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\\\\n",
     "\\end{align}\n",
-    "In the simulations, $B^i$ will be calculated numerically from $A_i$; however, it will be useful to analytically calculate $B^i$ to use calculating the initial $v^i$.\n"
+    "In the simulations, $B^i$ will be calculated numerically from $A_i$; however, it will be useful to analytically calculate $B^i$ to use calculating the initial $v^i$.\n",
+    "\n",
+    "#### Table of Contents:\n",
+    "1. [Steps 0-1](#preliminaries): Preliminaries\n",
+    "1. [Step 2](#step2): Set the vectors A and E in Spherical coordinates\n",
+    "1. [Step 3](#step3): Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
+    "1. [Step 4](#step4): Calculate $v^i$ from $A_i$ and $E_i$\n",
+    "1. [Step 5](#step5): NRPy+ Module Code Validation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='preliminaries'></a>\n",
     "### Steps 0-1: Preliminaries\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
     "Here, we will import the NRPy+ core modules and set the reference metric to Cartesian, set commonly used NRPy+ parameters, and set C parameters that will be set from outside the code eventually generated from these expressions. We will also set up a parameter to determine what initial data is set up, although it won't do much yet."
    ]
   },
@@ -64,7 +75,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='step2'></a>\n",
     "### Step 2: Set the vectors A and E in Spherical coordinates\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
     "We will first build the fundamental vectors $A_i$ and $E_i$ in spherical coordinates (see [Table 3](https://arxiv.org/pdf/1704.00599.pdf)). Note that we use reference_metric.py to set $r$ and $\\theta$ in terms of Cartesian coordinates; this will save us a step later when we convert to Cartesian coordinates. Since $C_0 = 1$,\n",
     "\\begin{align}\n",
     "A_{\\phi} &= \\frac{1}{2} r^2 \\sin^2 \\theta \\\\\n",
@@ -101,7 +115,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='step3'></a>\n",
     "### Step 3: Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
     "Now, we will use the coordinate transformation definitions provided by reference_metric.py to build the Jacobian $$ \\frac{\\partial x_i}{\\partial y_j}, $$ where $x_i \\in \\{r,\\theta,\\phi\\}$ and $y_i \\in \\{x,y,z\\}$. We would normally compute its inverse, but since none of the quantities we need to transform have upper indices, it is not necessary. Then, since both $A_i$ and $E_i$ have one lower index, both will need to be multiplied by the Jacobian."
    ]
   },
@@ -136,7 +153,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='step4'></a>\n",
     "### Step 4: Calculate $v^i$ from $A_i$ and $E_i$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
     "We will now find the magnetic field using equation 18 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf) $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k. $$ We will need the metric quantites: the lapse $\\alpha$, the shift $\\beta^i$, and the three-metric $\\gamma_{ij}$. We will also need the Levi-Civita symbol, provided by $\\text{WeylScal4NRPy}$. "
    ]
   },
@@ -212,7 +232,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NRPy+ Module Code Validation\n",
+    "<a id='step5'></a>\n",
+    "### Step 5: NRPy+ Module Code Validation\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\giraffe$ Exact Wald initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
