Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: Add velocity and B-field output

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -532,6 +532,10 @@
     "$$\n",
     "\\Gamma = \\alpha u^0 = \\sqrt{\\frac{1}{1 - \\gamma_{ij}v^i_{(n)}v^j_{(n)}}}.\n",
     "$$\n",
+    "Therefore, $\\Gamma v_{(n)}^i$ is given by\n",
+    "$$\n",
+    "\\Gamma v_{(n)}^i = \\frac{1}{\\alpha} \\left(v^i + \\beta^i\\right) \\sqrt{\\frac{1}{1 - \\gamma_{ij}v^i_{(n)}v^j_{(n)}}}.\n",
+    "$$\n",
     "* $A_i$, the *unstaggered* magnetic vector potential.\n",
     "* $B^i$, the *unstaggered* magnetic field vector (output only for validation purposes)."
    ]
@@ -542,6 +546,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# INPUT GRIDFUNCTIONS: The AUX or EVOL designation is *not* used in diagnostic modules.\n",
+    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\")\n",
+    "betaU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\")\n",
+    "alpha = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
+    "\n",
+    "DIM=3\n",
+    "\n",
     "gf_interp_list.append(gf_interp(\"IGM density primitive\",order=\"1\"))\n",
     "rho_b       = gri.register_gridfunctions(\"AUX\",\"rho_b\")\n",
     "interp_expr = rho_b\n",
@@ -551,6 +562,49 @@
     "P = gri.register_gridfunctions(\"AUX\",\"P\")\n",
     "interp_expr = P\n",
     "which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we implement:\n",
+    "$$\n",
+    "v_{(n)}^i = \\frac{1}{\\alpha} \\left(v^i + \\beta^i\\right),\n",
+    "$$\n",
+    "and\n",
+    "$$\n",
+    "\\Gamma v_{(n)}^i = \\sqrt{\\frac{1}{1 - \\gamma_{ij}v^i_{(n)}v^j_{(n)}}} v_{(n)}^i.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IGMvU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"IGMvU\")\n",
+    "Valenciav = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    Valenciav[i] = 1/alpha * (IGMvU[i] + betaU[i])\n",
+    "v_dot_v = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        v_dot_v += gammaDD[i][j]*Valenciav[i]*Valenciav[j]\n",
+    "\n",
+    "Gamma_times_ValenciavU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    Gamma_times_ValenciavU[i] = sp.sqrt(1/(1 - v_dot_v))*Valenciav[i]\n",
+    "    gf_interp_list.append(gf_interp(\"Lorentz factor, times Valencia vU\"+str(i),order=\"1\"))\n",
+    "    interp_expr = Gamma_times_ValenciavU[i]\n",
+    "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
+    "\n",
+    "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\")\n",
+    "for i in range(DIM):\n",
+    "    gf_interp_list.append(gf_interp(\"IGM magnetic field component B\"+str(i),order=\"1\"))\n",
+    "    interp_expr = BU[i]\n",
+    "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)"
    ]
   },
   {
@@ -572,16 +626,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# INPUT GRIDFUNCTIONS: The AUX or EVOL designation is *not* used in diagnostic modules.\n",
-    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\")\n",
-    "betaU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\")\n",
-    "alpha = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
-    "\n",
-    "DIM=3\n",
     "# Eq. 2.121 in B&S\n",
     "betaD = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
@@ -644,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,17 +781,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n",
     "#include <stdio.h>\n",
@@ -759,6 +799,8 @@
     "                                     const CCTK_REAL invdx0,const CCTK_REAL invdx1,const CCTK_REAL invdx2,\n",
     "                                     const CCTK_INT *InterpCounter,\n",
     "                                     const CCTK_REAL *rho_bGF,const CCTK_REAL *PGF,\n",
+    "                                     const CCTK_REAL *IGMvU0GF,const CCTK_REAL *IGMvU2GF,const CCTK_REAL *IGMvU2GF,\n",
+    "                                     const CCTK_REAL *BU0GF,const CCTK_REAL *BU1GF,const CCTK_REAL *BU2GF,\n",
     "                                     const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,\n",
     "                                     const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
     "                                     const CCTK_REAL *betaU0GF,const CCTK_REAL *betaU1GF,const CCTK_REAL *betaU2GF,\n",
@@ -775,6 +817,8 @@
     "  list_of_functions_to_interpolate(cctkGH,cctk_lsh,cctk_nghostzones,invdx0,invdx1,invdx2,\n",
     "                                   InterpCounter,\n",
     "                                   rho_b,P,\n",
+    "                                   vx,vy,vz,\n",
+    "                                   Bx,By,Bz,\n",
     "                                   gxx,gxy,gxz,gyy,gyz,gzz,\n",
     "                                   betax,betay,betaz,alp, interped_gf);\n",
     "}"
@@ -791,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,17 +875,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to interp_sph_grids_ETK/src/interp_counter.cc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a interp_sph_grids_ETK/src/interp_counter.cc\n",
     "#include <assert.h>\n",
@@ -908,17 +944,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_sph_grids_ETK/src/make.code.defn\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_sph_grids_ETK/src/make.code.defn\n",
     "# Main make.code.defn file for thorn interp_sph_grids_ETK\n",
@@ -940,17 +968,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_sph_grids_ETK/interface.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_sph_grids_ETK/interface.ccl\n",
     "\n",
@@ -998,17 +1018,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_sph_grids_ETK/param.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_sph_grids_ETK/param.ccl\n",
     "\n",
@@ -1120,17 +1132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_sph_grids_ETK/schedule.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_sph_grids_ETK/schedule.ccl\n",
     "\n",
