Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: Adjust scheduler, enable verbose=2

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -788,7 +788,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
+      "Overwriting interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
      ]
     }
    ],
@@ -1086,7 +1086,7 @@
     "CCTK_INT verbose \"Set verbosity level: 1=useful info; 2=moderately annoying (though useful for debugging)\" STEERABLE=ALWAYS\n",
     "{\n",
     "  0:2 :: \"0 = no output; 1=useful info; 2=moderately annoying (though useful for debugging)\"\n",
-    "} 1\n",
+    "} 2\n",
     "########################################\n",
     "# SPHERICAL COORDINATE SYSTEM PARAMETERS\n",
     "CCTK_INT N0 \"Number of points in r direction\" STEERABLE=RECOVER\n",
@@ -1203,7 +1203,7 @@
     "  OPTIONS: GLOBAL\n",
     "} \"Initialize InterplCounter variable to zero\"\n",
     "\n",
-    "SCHEDULE SphGrid_InitializeInterpCounter before VI_GRMHD_VolumeIntegralGroup AT CCTK_ANALYSIS\n",
+    "SCHEDULE SphGrid_InitializeInterpCounter before SphGrid_InterpGroup AT CCTK_ANALYSIS\n",
     "{\n",
     "  LANG: C\n",
     "  OPTIONS: GLOBAL\n",
