--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
     "    file.write(\"void get_gf_name(const int InterpCounter,char gf_name[100]) {\\n\")\n",
     "    for i in range(which_InterpCounter):\n",
     "        file.write(\"    if(InterpCounter==\"+str(i)+\") { snprintf(gf_name,100,\\\"\"+gf_interp_list[i].description+\"\\\"); return; }\\n\")\n",
-    "    file.write(\"    printf(\\\"Error. InterpCounter = %d unsupported. I should not be here.\\n\\\",InterpCounter); exit(1);\\n\")\n",
+    "    file.write(\"    printf(\\\"Error. InterpCounter = %d unsupported. I should not be here.\\\\n\\\",InterpCounter); exit(1);\\n\")\n",
     "    file.write(\"}\\n\")\n",
     "\n",
     "with open(\"interp_sph_grids_ETK/src/get_interp_order.h\", \"w\") as file:\n",
