Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: write and append to output file in correct order

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -314,13 +314,20 @@
    "source": [
     "%%writefile interp_sph_grids_ETK/src/output_to_file.h\n",
     "\n",
+    "#include \"define_NumInterpFunctions.h\"\n",
+    "\n",
     "void output_to_file(CCTK_ARGUMENTS,char gf_name[100],int *order,CCTK_REAL *output_f[1]) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
     "  char filename[100];\n",
     "  sprintf (filename, \"%s/interp_sph_grids.dat\", out_dir);\n",
-    "  FILE *file = fopen (filename,\"a+\");\n",
+    "  FILE *file;\n",
+    "  if(*InterpCounter == NumInterpFunctions) {\n",
+    "    file = fopen (filename,\"w\");\n",
+    "  } else {\n",
+    "    file = fopen (filename,\"a+\");\n",
+    "  }\n",
     "  if (! file) {\n",
     "    CCTK_VWarn (1, __LINE__, __FILE__, CCTK_THORNSTRING,\n",
     "                \"interp_sph_grid__ET_thorn: Cannot open output file '%s'\", filename);\n",
@@ -878,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"interp_sph_grids_ETK/src/interp_counter.cc\", \"w\") as file:\n",
+    "with open(\"interp_sph_grids_ETK/src/define_NumInterpFunctions.h\", \"w\") as file:\n",
     "    # Zero-offset array -> Start at which_InterpCounter-1 :\n",
     "    file.write(\"#define NumInterpFunctions \"+str(which_InterpCounter-1)+\"\\n\") "
    ]
@@ -892,12 +899,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to interp_sph_grids_ETK/src/interp_counter.cc\n"
+      "Overwriting interp_sph_grids_ETK/src/interp_counter.cc\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a interp_sph_grids_ETK/src/interp_counter.cc\n",
+    "%%writefile interp_sph_grids_ETK/src/interp_counter.cc\n",
     "#include <assert.h>\n",
     "#include <stdio.h>\n",
     "#include <stdlib.h>\n",
@@ -907,6 +914,8 @@
     "#include \"cctk.h\"\n",
     "#include \"cctk_Arguments.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
+    "\n",
+    "#include \"define_NumInterpFunctions.h\"\n",
     "\n",
     "void SphGrid_InitializeInterpCounterToZero(CCTK_ARGUMENTS)\n",
     "{\n",
